# Catalyst

./: .gitignore  .gitmodules  ARCHITECTURE_DESIGN.md  CLAUDE.md  CMakeLists.txt  CONVERSION_CHECKLIST.md  CPP_FILE_MAPPING.md  Catalyst  EXAMPLE.md  GUIDE_GPU.md  MANIM_CPP_REWRITE_PLAN.md  PYTHON_TO_CPP_PATTERNS.md  README.md  RENDERING_PIPELINE.md  TODO.md  VALIDATION_GUIDE.md  build.sh  catalyst.h  example_scene.py  gpu_check.py  main.cpp  sysbuild.sh  validate_all.sh  vid_utils.h
.github/workflows/: ci.yml  codeql.yml  python-publish.yml  release-publish-documentation.yml
animations/: TD1.cpp  simple_test.cpp
cmake/: CatalystConfig.cmake.in
docs/: DOCUMENTATION.md  PORTING.md
examples/consumer/: CMakeLists.txt  main.cpp  submobject_demo.cpp
manim-cpp/: CLAUDE.md  CMakeLists.txt  PROJECT_STATUS.md  README.md  build_output.txt  final_build.txt  vcpkg.json
manim-cpp/bindings/python/: __init__.py  bindings.cpp
manim-cpp/cmake/: FindFFmpeg.cmake
manim-cpp/examples/: gpu_render_to_file.cpp  text_fade_animation.cpp
manim-cpp/include/manim/animation/: animation.hpp  composition.hpp  creation.hpp  fading.hpp  gpu_animation_engine.hpp  hybrid_scheduler.hpp  movement.hpp  text_animation.hpp  transform.hpp
manim-cpp/include/manim/cli/: config.h  gpu_detector.h  gpu_detector.hpp
manim-cpp/include/manim/core/: async_compute.hpp  compute_engine.hpp  gpu_profiler.hpp  math.hpp  memory_pool.hpp  types.h
manim-cpp/include/manim/culling/: cluster_culler.hpp  contribution_culler.hpp  culling_types.hpp  frustum_culler.hpp  gpu_culling_pipeline.hpp  indirect_renderer.hpp  occlusion_culler.hpp  software_rasterizer.hpp  spatial_index.hpp
manim-cpp/include/manim/mobject/: mobject.hpp  point_cloud.hpp  vmobject.hpp
manim-cpp/include/manim/mobject/geometry/: circle.hpp  polygon.hpp  rectangle.hpp  square.hpp
manim-cpp/include/manim/mobject/text/: text.hpp
manim-cpp/include/manim/mobject/three_d/: mesh.hpp  sphere.hpp  surface.hpp  volume.hpp
manim-cpp/include/manim/renderer/: basic_renderer.hpp  gpu_3d_renderer.h  gpu_3d_renderer.hpp  gpu_particle_system.hpp  hybrid_renderer.h  hybrid_renderer.hpp  opengl_renderer.hpp  renderer.hpp  shader_system.hpp  text_renderer.hpp  vulkan_renderer.hpp  vulkan_utils.hpp
manim-cpp/include/manim/scene/: camera.hpp  enhanced_camera.h  enhanced_camera.hpp  hybrid_scene_manager.h  hybrid_scene_manager.hpp  moving_camera_scene.h  moving_camera_scene.hpp  scene.h  scene_optimizer.h  scene_optimizer.hpp  three_d_scene.h  three_d_scene.hpp  vector_space_scene.h  vector_space_scene.hpp  zoomed_scene.h  zoomed_scene.hpp
manim-cpp/include/manim/text/: font_manager.hpp  latex_renderer.hpp  sdf_generator.hpp  text_layout.hpp
manim-cpp/include/manim/utils/: bezier.h  bezier.hpp  color.h  gpu_utils.h  gpu_utils.hpp  hybrid_compute.h  hybrid_compute.hpp  rate_functions.h  space_ops.h
manim-cpp/shaders/compute/: batch_interpolate.comp  bezier_tessellation.comp  bloom.comp  float_to_sortable.comp  matrix_multiply.comp  particle_update.comp  path_follow.comp  prefix_sum.comp  radix_histogram.comp  radix_scatter.comp  taa.comp  tone_mapping.comp  transform_points.comp  vector_ops.comp
manim-cpp/shaders/compute/culling/: bvh_refit.comp  cluster_cull.comp  contribution_cull.comp  depth_reproject.comp  depth_to_hiz.comp  frustum_cull.comp  generate_draws.comp  generate_leaves.comp  hiz_build.comp  karras_bvh.comp  morton_codes.comp  occlusion_cull.comp  software_raster.comp
manim-cpp/shaders/fragment/: deferred_gbuffer.frag  deferred_lighting.frag  sdf_text.frag  simple_triangle.frag
manim-cpp/shaders/raytracing/: shadow.rahit  shadow.rgen  shadow.rmiss
manim-cpp/shaders/vertex/: deferred_gbuffer.vert  geomorph_mesh.vert  sdf_text.vert  simple_triangle.vert
manim-cpp/src/animation/: animation.cpp  composition.cpp  gpu_animation_engine.cpp  movement.cpp  text_animation.cpp  transform.cpp
manim-cpp/src/cli/: config.cpp  gpu_detector.cpp  main.cpp
manim-cpp/src/core/: async_compute.cpp  compute_engine.cpp  gpu_profiler.cpp
manim-cpp/src/core/gpu/: memory_pool.cpp
manim-cpp/src/culling/: cluster_culler.cpp  contribution_culler.cpp  frustum_culler.cpp  gpu_culling_pipeline.cpp  indirect_renderer.cpp  occlusion_culler.cpp  software_rasterizer.cpp  spatial_index.cpp
manim-cpp/src/mobject/: mobject.cpp  point_cloud.cpp  vmobject.cpp
manim-cpp/src/mobject/geometry/: circle.cpp
manim-cpp/src/mobject/text/: text.cpp
manim-cpp/src/mobject/three_d/: mesh.cpp
manim-cpp/src/renderer/: basic_renderer.cpp  gpu_3d_renderer.cpp  gpu_particle_system.cpp  hybrid_renderer.cpp  renderer.cpp  shader_system.cpp  text_renderer.cpp  vulkan_renderer.cpp
manim-cpp/src/scene/: enhanced_camera.cpp  hybrid_scene_manager.cpp  moving_camera_scene.cpp  scene.cpp  scene_optimizer.cpp  three_d_scene.cpp  vector_space_scene.cpp  zoomed_scene.cpp
manim-cpp/src/text/: font_manager.cpp  latex_renderer.cpp  sdf_generator.cpp  text_layout.cpp
manim-cpp/src/utils/: bezier.cpp  gpu_utils.cpp  hybrid_compute.cpp
manim-cpp/tests/benchmarks/: benchmark_performance.cpp
manim-cpp/tests/integration/: test_end_to_end.cpp
manim-cpp/tests/unit/: test_animations.cpp  test_culling.cpp  test_gpu.cpp  test_mobjects.cpp  test_scenes.cpp  test_text.cpp
manim-cpp/tests/validation/: gpu_3d_integration_tests.cpp  performance_benchmarks.cpp  system_verification.cpp  test_python_compatibility.py
manim-cpp/tests/visual/: test_visual_regression.cpp
manim/_config/: __init__.py  utils.py
manim/animation/: animation.py  creation.py  transform.py
manim/camera/: camera.py  mapping_camera.py  moving_camera.py  three_d_camera.py
manim/mobject/: mobject.py  vector_field.py
manim/renderer/: cairo_renderer.py  opengl_renderer.py  shader.py
manim/scene/: scene.py  scene_file_writer.py  three_d_scene.py  vector_space_scene.py
manim/utils/: caching.py  deprecation.py  hashing.py  opengl.py  (+3 more)
scripts/: frames_to_mp4.sh  gpu_debug.sh
shaders/: morph.frag  morph.vert  shader.frag  shader.vert  shape.frag  shape.vert  shape3d.frag  shape3d.vert
tests/: test_config.py
(+373 files in other folders)
